--- a/src/app/product-list/product-item/product-item.component.html
+++ b/src/app/product-list/product-item/product-item.component.html
@@ -7,5 +7,5 @@
         <div><s>{{product.productActualPriceFormatted}}</s></div>
         <div>{{product.percentageDiscount}}</div>
     </div>
-    <button type="submit" (click)="addProductToCart(product)">Add to Cart</button>
+    <button type="submit" (click)="addProductToShoppingCart(product)">Add to Cart</button>
 </li>
